# pyramid-cookiecutter-starter

./: .gitignore  README.md  pyproject.toml  tox.ini
hooks/: post_gen_project.py
tests/: test_it.py
{{cookiecutter.repo_name}}/: .gitignore  README.md  pyproject.toml
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/base_views/: default.py
