[project]
name = "pyramid-cookiecutter-starter"
version = "0.1.0"
description = "Default template for PDM package"

dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "cookiecutter",
    "pytest",
    "pytest-cookies",
    "pytest-venv"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
